plugins {
    id "io.freefair.lombok" version "5.1.0"
}

subprojects {
    group = "com.gakshintala.parkmycar"
    version = "0.0.1-SNAPSHOT"

    repositories {
        jcenter()
    }

    apply plugin: "java"
    apply plugin: "idea"
    apply plugin: "io.freefair.lombok"

    java {
        sourceCompatibility = JavaVersion.VERSION_14
        targetCompatibility = JavaVersion.VERSION_14
    }

    dependencies {
        testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
    }

    tasks.withType(Test) {
        jvmArgs '--enable-preview'
        useJUnitPlatform()
    }

}